--- a/package.json
+++ b/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "frain-typescript-sdk",
-  "module": "index.ts",
-  "type": "module",
-  "devDependencies": {
-    "@types/bun": "latest"
-  },
-  "peerDependencies": {
-    "typescript": "^5"
-  },
-  "dependencies": {
-    "axios": "^1.13.2",
-    "zod": "^4.3.5"
-  }
+    "name": "frain-typescript-sdk",
+    "module": "index.ts",
+    "exports": {
+        ".": "./index.ts"
+    },
+    "scripts": {
+        "test": "bun test"
+    },
+    "type": "module",
+    "devDependencies": {
+        "@types/bun": "latest"
+    },
+    "peerDependencies": {
+        "typescript": "^5"
+    },
+    "dependencies": {
+        "axios": "^1.13.2",
+        "zod": "^4.3.5"
+    }
 }
