--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "dependencies": {
         "axios": "^1.13.2",
         "zod": "^4.3.5"
+    },
+    "publishConfig": {
+        "access": "public"
     }
 }
